hphp/hack/test/typecheck/like_types/dynamic_coercion/smethod_id.php.exp
File "smethod_id.php", line 9, characters 29-30:
Invalid argument (Typing[4110])
File "smethod_id.php", line 5, characters 28-30:
Expected int
File "smethod_id.php", line 8, characters 15-21:
But got dynamic
